Change list to alpha list

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -807,7 +807,7 @@
                                 <ol>
                                     <li>Install Tampermonkey extension on your browser by clicking on 
                                         relative link below and following the install instructions:
-                                        <ul>
+                                        <ul style="list-style-type: lower-alpha;">
                                         <li><a title="Tampermonkey for Chrome" href="https://www.tampermonkey.net/index.php?browser=chrome" target="_blank" rel="noopener">Chrome - recommended for Extend</a></li>
                                         <li><a title="Tampermonkey for Edge" href="https://www.tampermonkey.net/index.php?browser=edge" target="_blank" rel="noopener">Edge</a></li>
                                         <li><a title="Tampermonkey for Firefox" href="https://www.tampermonkey.net/index.php?browser=firefox" target="_blank" rel="noopener">Firefox - <strong>not recommended</strong> for Extend</a></li>
